[--story=860119973] HDDSFS II: Add InodeLockManager framework